--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -31,14 +31,24 @@
 				<ul class="list-group">
 					<% for(let i = 0; i < notes.length; i++) { %>
 					<li
-						class="list-group-item d-flex justify-content-between align-items-center">
-						<%= notes[i].title %>
-						<button
-							class="btn btn-danger"
-							data-type="remove"
-							data-id="<%= notes[i].id %>">
-							&times;
-						</button>
+						class="list-group-item d-flex justify-content-between align-items-center"
+						data-id="<%= notes[i].id %>">
+						<span class="note-title"><%= notes[i].title %></span>
+						<div>
+							<button
+								class="btn btn-primary"
+								type="submit"
+								data-type="edit"
+								data-id="<%= notes[i].id %>">
+								Редактировать
+							</button>
+							<button
+								class="btn btn-danger"
+								data-type="remove"
+								data-id="<%= notes[i].id %>">
+								&times;
+							</button>
+						</div>
 					</li>
 					<% } %>
 				</ul>
