--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -37,10 +37,13 @@
 					<% for (let i = 0; i < notes.length; i++) { %>
 						<li class="list-group-item d-flex justify-content-between align-items-center">
 							<span><%= notes[i].title %></span>
+							<span><%= notes[i].owner %></span>
+							<% if(notes[i].owner === userEmail) { %>
 							<div>
 								<button class="btn btn-primary" data-type="edit" data-id="<%= notes[i].id %>" data-title="<%= notes[i].title %>">Редактировать</button>
 								<button class="btn btn-danger" data-type="remove" data-id="<%= notes[i].id %>">&times;</button>
 							</div>
+							<% } %>
 						</li>
 					<% } %>
 				</ul>
